Java Basic: final Keyword
public class Final {
	public static void main(String[] args) { 
 final double pi =  3.14;
  System.out.println(pi);  
  double pi=3.15; 
		
	}
}



output:
Final.java:5: error: variable pi is already defined in method main(String[])
  double pi=3.15; 
         ^
1 error
